<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mad.practice.homework02.MainActivity">

    <ImageButton
        android:id="@+id/addTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/addTask"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/plus" />

    <TextView
        android:id="@+id/tvTaskTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="112dp"
        android:text="@string/taskTitle"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/addTask"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTaskDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginTop="16dp"
        android:text="@string/taskDate"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTaskTitle" />

    <TextView
        android:id="@+id/tvTaskTime"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/taskTime"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.405"
        app:layout_constraintStart_toEndOf="@+id/tvTaskDate"
        app:layout_constraintTop_toBottomOf="@+id/tvTaskTitle" />

    <TextView
        android:id="@+id/tvTaskPriority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:text="@string/taskPriority"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTaskTitle" />

    <ImageButton
        android:id="@+id/btnFirst"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/addTask"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTaskLabel"
        app:layout_constraintVertical_bias="0.85"
        app:srcCompat="@mipmap/first_btn" />

    <ImageButton
        android:id="@+id/btnPrevious"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/addTask"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnFirst"
        app:layout_constraintTop_toBottomOf="@+id/tvTaskPriority"
        app:layout_constraintVertical_bias="0.85"
        app:srcCompat="@mipmap/previous_btn" />

    <ImageButton
        android:id="@+id/btnEdit"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/addTask"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnPrevious"
        app:layout_constraintTop_toBottomOf="@+id/tvTaskPriority"
        app:layout_constraintVertical_bias="0.85"
        app:srcCompat="@mipmap/edit_btn" />

    <ImageButton
        android:id="@+id/btnDelete"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/addTask"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnNext"
        app:layout_constraintStart_toEndOf="@+id/btnEdit"
        app:layout_constraintTop_toBottomOf="@+id/tvTaskPriority"
        app:layout_constraintVertical_bias="0.85"
        app:srcCompat="@mipmap/delete_btn" />

    <ImageButton
        android:id="@+id/btnNext"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/addTask"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnLast"
        app:layout_constraintTop_toBottomOf="@+id/tvTaskPriority"
        app:layout_constraintVertical_bias="0.85"
        app:srcCompat="@mipmap/next_btn" />

    <ImageButton
        android:id="@+id/btnLast"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/addTask"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTaskPriority"
        app:layout_constraintVertical_bias="0.85"
        app:srcCompat="@mipmap/last_btn" />

    <TextView
        android:id="@+id/tvTaskLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="51dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="380dp"
        android:text="@string/tvTaskLabelTxt"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btnFirst"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.85" />

    <TextView
        android:id="@+id/tvCurrentTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:text="@string/zero"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvTaskLabel"
        app:layout_constraintStart_toEndOf="@+id/tvTaskLabel" />

    <TextView
        android:id="@+id/tvOfLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:text="@string/tvOfLabel"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvCurrentTask"
        app:layout_constraintStart_toEndOf="@+id/tvCurrentTask" />

    <TextView
        android:id="@+id/tvTotalTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:text="@string/zero"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvOfLabel"
        app:layout_constraintStart_toEndOf="@+id/tvOfLabel" />

</android.support.constraint.ConstraintLayout>
